# geodist

./: AGENTS.md  Makefile  PROMPTS.txt  README.md
.github/matchers/: mypy.json
.github/scripts/: bump_version.py  check_manifest_versions.py
.github/workflows/: ci.yml  prepare-release.yml  release.yml
docs/: publishing.md
docs/specs/: 2025-11-19_github-actions-ci.md  2025-11-19_pyo3-integration-plan.md  2025-11-19_python-package-structure.md  2025-11-19_rust-mvp-algorithm.md  README.md  _TEMPLATE.md
docs/specs/accepted/: 2025-11-20_ci-publishing-dry-run.md  2025-11-20_witness-points-hausdorff.md
docs/specs/proposed/: 2025-11-19_witness-points-hausdorff.md  2025-11-20_ellipsoidal-geodesic-upgrade.md  2025-11-20_geometry-distance-metrics.md  2025-11-20_python-vectorization.md  2025-11-24_geodist-mvp-roadmap.md  (+1 more)
experiments/: README.md  pyproject.toml
experiments/notebooks/: geodist_usage.ipynb  vectorized_batches.ipynb
experiments/src/experiments/: __init__.py
geodist-rs/: Cargo.toml  Makefile
geodist-rs/benches/: distance.rs
geodist-rs/src/: distance.rs  hausdorff.rs  lib.rs  polygon.rs  polyline.rs  python.rs  types.rs
loxodrome-rs/: Cargo.toml
loxodrome/tests/: test_bindings_errors.py  test_bindings_polyline.py
pygeodist/: Makefile  README.md  development.md  pyproject.toml  ruff.toml
pygeodist/devtools/: bench_vectorized.py  lint.py
pygeodist/src/geodist/: io.py  (+10 more)
pygeodist/tests/: test_bindings_polyline.py  test_cli.py  test_ext_shapely.py  test_geometry.py  test_interop_shapely.py  test_ops.py  test_python_surface.py  test_vectorized.py
(+3 files in other folders)
