[project]
name = "geodist-experiments"
version = "0.0.0"
description = "Experimentation, benchmarks, notebooks, and visualizations for geodist development."
readme = "README.md"
authors = [
    { name = "Edward Jones", email = "e@eddie.land" }
]
requires-python = ">=3.10,<4.0"

# Core dependencies for experimentation - add freely as needed
dependencies = [
    "pygeodist",
    "numpy>=2,<3",
    "shapely>=2.0,<3.0",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
]
bench = [
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "rich>=14.0.0",
    "ruff>=0.14.6",
]

[tool.uv.sources]
pygeodist = { path = "../pygeodist", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiments"]
